# psylanding

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: c9d90202229c_initial_migration.py
app/: main.py  seed.py
app/api/: deps.py
app/api/routes/: admin_booking.py  admin_posts.py  auth.py  blog.py  booking.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  booking.py  post.py  user.py
app/schemas/: auth.py  booking.py  post.py
app/services/: telegram.py
app/static/css/: admin.css  style.css
app/static/js/: editor.js
app/templates/: base.html
app/templates/admin/: base.html  bookings.html  dashboard.html  login.html  post_form.html  posts.html
app/templates/admin/components/: admin_sidebar.htm  admin_topbar.html
app/templates/components/: footer.html  header.html  sticky_booking.html
app/templates/pages/: 404.html  blog_detail.html  blog_list.html  home.html
app/web/routes/: admin.py  admin_auth.py  pages.py
